--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<title>Portfolio Website</title>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
     </div>
     <section class="about">
         <div class="main">
-            <img src="img/background1.jpg">
+            <img src="background1.jpg">
             <div class="about-text">
                 <h2>About Me</h2>
                 <h5>Developer <span>& Designer</span></h5>
